--- a/src/app/forms/preview/preview.component.html
+++ b/src/app/forms/preview/preview.component.html
@@ -141,12 +141,10 @@
                                             <td class="table_result_line">{{comment.gene}}</td>
                                             <td>{{comment.variant_id}}</td>
                                             <td class="textarea01">
-                                                <textarea style="width:96%"class="textarea_01">{{comment.comment}}</textarea>
+                                                <textarea style="width:96%" class="textarea_01">{{comment.comment}}</textarea>
                                             </td>
                                             <td class="textarea01">
-                                                <textarea style="width:96%"class="textarea_01">
-                                                    {{comment.reference}}
-                                                </textarea>
+                                                <textarea style="width:96%" class="textarea_01">{{comment.reference}}</textarea>
                                             </td>
                                         </tr>
                                     </ng-container>
