--- a/src/app/home/components/manage-statistics/manage-statistics.component.html
+++ b/src/app/home/components/manage-statistics/manage-statistics.component.html
@@ -14,8 +14,8 @@
                 <button type="button" class="btn btn_02" (click)="search(start.value, end.value, userId.value, userNm.value)" >조회</button>
             </div>
             <div> Total: {{totRecords}} Records  ({{curPage}} / {{totPage}}) Pages  </div>   
-            <div class="box">
-                <table border="0" cellpadding="0" cellspacing="0" class="table_list">
+            <div class="box" style="overflow-y: auto;">
+                <table border="0" cellpadding="0" cellspacing="0" class="table_list header-fix">
                     <colgroup>
                     <col style="width:5%;" />
                     <col style="width:10%;" />
