--- a/src/app/inhouse/artifacts/artifacts.component.html
+++ b/src/app/inhouse/artifacts/artifacts.component.html
@@ -21,32 +21,32 @@
             </tr>
         </table>
         
-        <div class="box mg_b20 pd_20">
+        <div class="box mg_b20 pd_20 search">
             <input type="text" class="input_01" placeholder="Genes" #genes>
             <button type="button" class="btn btn_02" (click)="search(genes.value)" style="margin-left: 10px;">조회</button>
+            <table border="0" cellspacing="0" cellpadding="0" class="mg_b10">
+                <tr>
+                    <td class="main_btn">
+                        <ul>
+                            <li>
+                                <button type="button" class="btn btn_01" (click)="insertRow()" >추가</button>
+                            </li>
+                            <!--
+                            <li>
+                                <button type="button" class="btn btn_01">저장</button>
+                            </li>
+                             -->
+                        </ul>
+                    </td> 
+                </tr>
+            </table>
         </div>
     <div class="total">
         <span>Total: {{totRecords}} Records  ({{curPage}} / {{totPage}}) Pages</span>
-        <table border="0" cellspacing="0" cellpadding="0" class="mg_b10">
-            <tr>
-                <td class="main_btn">
-                    <ul>
-                        <li>
-                            <button type="button" class="btn btn_01" (click)="insertRow()" >추가</button>
-                        </li>
-                        <!--
-                        <li>
-                            <button type="button" class="btn btn_01">저장</button>
-                        </li>
-                         -->
-                    </ul>
-                </td> 
-            </tr>
-        </table>
     </div>     
     <div class="table-box-wrap">
         <div class="table-box box"> 
-            <table border="0" cellpadding="0" cellspacing="0" class="table_list " style="max-height:36px;"> 
+            <table border="0" cellpadding="0" cellspacing="0" class="table_list header-fix"> 
                 <colgroup> 
                 </colgroup>    
                 <thead>
