--- a/src/app/inhouse/comments/comments.component.html
+++ b/src/app/inhouse/comments/comments.component.html
@@ -20,33 +20,33 @@
             </tr>
         </table>
         
-        <div class="box mg_b20 pd_20">
+        <div class="box mg_b20 pd_20 search">
             <input type="text" class="input_01" placeholder="Genes" #genes>
             <button type="button" class="btn btn_02" (click)="search(genes.value)" style="margin-left: 10px;">조회</button>
+            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
+                <tr>
+                    <td class="main_btn">
+                        <ul>
+                            <li>
+                                <button type="button" class="btn btn_01" (click)="insertRow()" >추가</button>
+                            </li>
+                            <!--
+                            <li>
+                                <button type="button" class="btn btn_01">저장</button>
+                            </li>
+                            -->
+                        </ul>
+                    </td>
+                </tr>
+            </table>
         </div>
     <div class="total">
          <span>Total: {{totRecords}} Records  ({{curPage}} / {{totPage}}) Pages  </span>
-         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
-            <tr>
-                <td class="main_btn">
-                    <ul>
-                        <li>
-                            <button type="button" class="btn btn_01" (click)="insertRow()" >추가</button>
-                        </li>
-                        <!--
-                        <li>
-                            <button type="button" class="btn btn_01">저장</button>
-                        </li>
-                        -->
-                    </ul>
-                </td>
-            </tr>
-        </table>
     </div>     
     <div class="table-box-wrap">
-        <div class="table-box box">
+        <div class="table-box box" style="overflow-x: auto;">
     
-            <table border="0" cellpadding="0" cellspacing="0" class="table_list " style="max-height:36px;">
+            <table border="0" cellpadding="0" cellspacing="0" class="table_list header-fix">
                 <colgroup>
                     <col width="3%" />
                     <col width="7%" />
@@ -54,14 +54,14 @@
                     <col width="7%" />
                     <col width="30%" />
                     <col width="30%" />
-                    <col width="%" />
+                    <col width="*" />
                 </colgroup>
                 <thead>
                     <tr class="pd-r-12">
-                        <th style ="width:2px;" class="txt_l">No</th>
-                        <th style ="width:5px;" class="txt_l">Type</th>
-                        <th style ="width:50px;" class="txt_l">Gene</th>
-                        <th style ="width:50px;" class="txt_l">Variant Id</th>
+                        <th class="txt_l">No</th>
+                        <th class="txt_l">Type</th>
+                        <th class="txt_l">Gene</th>
+                        <th class="txt_l">Variant Id</th>
                         <th class="txt_l">Comment</th> 
                         <th class="txt_l">Reference</th>
                         <th class="txt_c">수정/삭제</th> 
