--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -842,7 +842,7 @@
 }
 .total > span {
   display: inline-block;
-  margin-top: 15px;
+  /* margin-top: 15px; */
 }
 .total > table {
   display: inline-block;
@@ -903,4 +903,17 @@
 .sub-menu > li.on {
   /* font-weight: bold; */
   color: #2196f3;
+}
+
+.search > table {
+  display: inline-block;
+  width: auto;
+  vertical-align: top;
+  margin-top: 5px;
+  float: right;
+}
+.search::after {
+  content: '';
+  display: inline-block;
+  clear: both;
 }
