--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -401,7 +401,7 @@
                             class="input_02  textcenter" size="10" formControlName="variant_id">
                         </td>
                         <td class="textarea01"><textarea style="width:96%;display:block;margin:0 auto;" class="textarea_01" formControlName="comment"></textarea></td>
-                        <td class="textarea01"><textarea style="width:96%;display:block;margin:0 auto;" class="textarea_01" formControlName="reference"></textarea></td> 
+                        <td class="textarea01"><textarea style="width:96%;display:block;margin:0 auto;white-space: pre-wrap;" class="textarea_01" formControlName="reference"></textarea></td> 
                         <td  align="center">
                             <img [src]="'assets/images/cancel.png'" (click)="removeCommentRow(i)">
                         </td>
