--- a/src/app/forms/form3/form3.component.html
+++ b/src/app/forms/form3/form3.component.html
@@ -29,23 +29,17 @@
             <div style="margin-top:5px;"></div>
             <table width="100%" cellpadding="0" cellspacing="0" class="table_result">
                 <colgroup>
-                <col style="width:30%;" />
-                <col style="width:20%;" />
+                <col style="width:50%;" />
                 <col style="width:50%;" />
                 </colgroup>
                 <thead>
                     <tr>
-                        <th class="table_result_line">Diagnosis</th>                
-                        <th>Genetic</th>
+                        <th class="table_result_line">Bone marrow aspiration analysis</th>                
                         <th>Chromosomal analysis</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="table_result_line" style="text-align: center;">
-                            <input type="text" class="input_02 textcenter"  
-                            [(ngModel)]= "profile.leukemia" [ngModelOptions]="{standalone: true}">
-                        </td>
                         <td class="table_result_line"  style="text-align: center;">
                             <input type="text" class="input_02  textcenter"  
                             [(ngModel)]="profile.flt3itd" [ngModelOptions]="{standalone: true}">
