--- a/src/app/inhouse/genemgn/genemgn.component.scss
+++ b/src/app/inhouse/genemgn/genemgn.component.scss
@@ -13,3 +13,9 @@
    background-color: lightcoral;
    color: white;
  }
+
+ .main_menu {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
