--- a/src/app/home/components/manage-users/manage-users.component.html
+++ b/src/app/home/components/manage-users/manage-users.component.html
@@ -2,7 +2,7 @@
     <div id="content">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
             <tr>
-                <td  class="mail_title">User Management</td>
+                <td  class="mail_title">사용자 관리</td>
                 <td class="main_btn"> </td>
             </tr>
         </table>
@@ -30,7 +30,7 @@
                     <tr>
                         <th>No</th>
                         <th>ID</th> 
-                        <th>진검/병리</th>
+                        <th>부서</th>
                         <th>사용자구분</th>
                         <th>사용자명</th>
                         <th>등록일자</th>
