--- a/src/app/inhouse/genemgn/addgene/addgene.component.html
+++ b/src/app/inhouse/genemgn/addgene/addgene.component.html
@@ -1,7 +1,7 @@
 
         <!--popup size = width: 300px;height: 180px;-->
         <div class="container">
-          <div class="title">추가 유전자명</div>
+          <div class="title">유전자명 추가</div>
           <div class="content">
               <input type="text" class="input_01" placeholder="추가 유전자명" #gene>
           </div>
