--- a/src/app/inhouse/genemgn/deletegene/deletegene.component.html
+++ b/src/app/inhouse/genemgn/deletegene/deletegene.component.html
@@ -1,6 +1,6 @@
         <!--popup size = width: 300px;height: 180px;-->
         <div class="container">
-          <div class="title">삭제 유전자명</div>
+          <div class="title">유전자명 삭제</div>
           <div class="content">
               <label class="wid100p">{{genename}}</label>
           </div>
