--- a/src/app/inhouse/genemgn/updategene/updategene.component.html
+++ b/src/app/inhouse/genemgn/updategene/updategene.component.html
@@ -1,6 +1,6 @@
         <!--popup size = width: 300px;height: 180px;-->
         <div class="container">
-          <div class="title">수정 유전자명</div>
+          <div class="title">유전자명 수정</div>
           <div class="content"  >
               <label>{{genename}}</label>
               <input type="text" class="input_01" placeholder="수정 유전자명"  #newgene>
