--- a/src/app/inhouse/genemgn/genemgn.component.html
+++ b/src/app/inhouse/genemgn/genemgn.component.html
@@ -9,7 +9,7 @@
 
 
        
-       <div class="box mg_b20 pd_20">
+       <div class="box mg_b20 pd_20 search">
          <select class="select_01 select_001" #gene (change)="genelists(gene.value)">
            <option value="AML">AML</option>
            <option value="ALL">ALL</option>
@@ -18,10 +18,7 @@
          </select>&nbsp;&nbsp;
          <!-- <input type="text" class="input_01" placeholder="" />
          <button type="button" class="btn btn_02" style="margin-left: 10px;">조회</button> -->
-
-       </div>
-       <div class="total">
-         <table border="0" cellspacing="0" cellpadding="0" class="mg_b10">
+         <table border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td class="main_btn">
               <ul>
@@ -39,7 +36,6 @@
           </tr>
         </table>
        </div>
-
        <div class="box">
          <div class="box_100">
            <table border="0" cellpadding="0" cellspacing="0" class="table_list  fixed_header table_resul_x">
