--- a/src/app/inhouse/genemgn/addgene/addgene.component.html
+++ b/src/app/inhouse/genemgn/addgene/addgene.component.html
@@ -1,9 +1,9 @@
 
         <!--popup size = width: 300px;height: 180px;-->
         <div class="container">
-          <div class="title">추가 유전자명</div>
+          <div class="title">유전자명 추가</div>
           <div class="content">
-              <input type="text" class="input_01" placeholder="추가 유전자명" #gene>
+              <input type="text" class="input_01" placeholder="유전자명 추가" #gene>
           </div>
           <div class="btn-gp">
               <button class="btn btn_bg" (click)="save(gene.value)"><span>확인</span></button>
