--- a/src/app/inhouse/artifacts/artifacts.component.html
+++ b/src/app/inhouse/artifacts/artifacts.component.html
@@ -47,8 +47,16 @@
     <div class="table-box-wrap">
         <div class="table-box box"> 
             <table border="0" cellpadding="0" cellspacing="0" class="table_list header-fix"> 
-                <colgroup> 
-                </colgroup>    
+                <colgroup>
+                    <col width="3%" />
+                    <col width="7%" />
+                    <col width="7%" />
+                    <col width="7%" />
+                    <col width="20%" />
+                    <col width="*" />
+                    <col width="*" />
+                    <col width="7%" />
+                </colgroup>   
                 <thead>
                     <tr class="pd-r-12">
                         <th class="txt_l">No.</th>
