--- a/src/app/inhouse/benign/benign.component.html
+++ b/src/app/inhouse/benign/benign.component.html
@@ -46,6 +46,16 @@
         <div class="table-box box">
     
             <table border="0" cellpadding="0" cellspacing="0" class="table_list header-fix"> 
+                <colgroup>
+                    <col width="3%" />
+                    <col width="7%" />
+                    <col width="7%" />
+                    <col width="7%" />
+                    <col width="*" />
+                    <col width="20%" />
+                    <col width="*" />
+                    <col width="7%" />
+                </colgroup>
                 <thead>
                     <tr class="pd-r-12">
                         <th class="txt_l" >No.</th>
