--- a/src/app/forms/form3/form3.component.html
+++ b/src/app/forms/form3/form3.component.html
@@ -169,7 +169,7 @@
       </div>
       <div>
         <div  class="font_14 pd_t15">
-            <textarea style="width:98%"class="textarea_01" [(ngModel)="vusmsg"]></textarea>
+            <textarea style="width:98%"class="textarea_01" [(ngModel)]="vusmsg"></textarea>
           </div>
       </div>
 
