--- a/src/app/forms/form4/form4.component.html
+++ b/src/app/forms/form4/form4.component.html
@@ -36,7 +36,7 @@
                 <thead>
                     <tr>
                         <th class="table_result_line">Diagnosis</th>                
-                        <th>Genetic</th>
+                        <th>Genetic test</th>
                         <th>Chromosomal analysis</th>
                     </tr>
                 </thead>
@@ -44,15 +44,18 @@
                     <tr>
                         <td class="table_result_line" style="text-align: center;">
                             <input type="text" class="input_02 textcenter"  
-                            [(ngModel)]= "profile.leukemia" [ngModelOptions]="{standalone: true}">
+                            [(ngModel)]= "profile.leukemia" >
                         </td>
                         <td class="table_result_line"  style="text-align: center;">
-                            <input type="text" class="input_02  textcenter"  
-                            [(ngModel)]="profile.flt3itd" [ngModelOptions]="{standalone: true}">
+                            <!-- <input type="text" class="input_02  textcenter"  
+                            [(ngModel)]="profile.flt3itd" [ngModelOptions]="{standalone: true}"> -->
+                            <textarea class="textarea_01 textcenter" 
+                               [(ngModel)]="profile.flt3itd" row=2  
+                               style="width: 100%; height: 100%; border: none"></textarea>
                         </td>
                         <td  style="text-align: center;">
                             <input type="text" class="input_02 textcenter"  
-                            [(ngModel)]="profile.chron" [ngModelOptions]="{standalone: true}">
+                            [(ngModel)]="profile.chron">
                         </td>
                     </tr>
                 </tbody>
@@ -182,7 +185,7 @@
       </div>
       <div>
         <div  class="font_14 pd_t15">
-            <textarea style="width:98%"class="textarea_01" [(ngModel)="vusmsg"]></textarea>
+            <textarea style="width:98%"class="textarea_01" [(ngModel)]="vusmsg"></textarea>
           </div>
       </div>
 
