--- a/src/app/inhouse/comments/comments.component.html
+++ b/src/app/inhouse/comments/comments.component.html
@@ -54,7 +54,7 @@
                     <col width="7%" />
                     <col width="*" />
                     <col width="30%" />
-                    <col width="7%" />
+                    <col width="10%" />
                 </colgroup>
                 <thead>
                     <tr class="pd-r-12">
@@ -94,7 +94,7 @@
                             <td class="text-right">
                                 <span class="bdnone" *ngIf="status.value === 'R'">
                                     <a class="btn-edit" (click)="status.value='U'">수정</a>
-                                    <a class="btn-delete" (click)="deleteRow(list.id, list.gene)">삭제</a>
+                                    <a class="btn-delete" (click)="deleteRow(list.id, list.type, list.gene )">삭제</a>
                                 </span>
                                 <span class="bdnone" *ngIf="status.value === 'U'">
                                     <a class="btn-cancel" (click)="status.value='R'">취소</a> 
