개행문자 처리 수정

--- a/src/app/inhouse/comments/comments.component.scss
+++ b/src/app/inhouse/comments/comments.component.scss
@@ -143,3 +143,15 @@ caption {
 //     width: 11px;
 //     background-color: #fafafa;
 // }
+
+
+.pre-box {
+	display: inline-block;
+    white-space: pre-wrap;
+    max-width: 100%;
+}
+
+textarea.padding-5 {
+	box-sizing: border-box;
+	padding: 5px;
+}
