--- a/src/app/inhouse/comments/comments.component.html
+++ b/src/app/inhouse/comments/comments.component.html
@@ -84,12 +84,12 @@
                                 <span class="bdnone" *ngIf="status.value === 'U'"><input type="text"  class="clr-input wid120" value="{{list.variant_id}}" id="variant_id{{list.id}}"   ></span>
                             </td>  
                             <td class="txt_l">
-                                <span class="bdnone" *ngIf="status.value === 'R'">{{list.comment}}</span>
-                                <span class="bdnone" *ngIf="status.value === 'U'"><textarea rows="10"  cols="70" class="wid500" id="comment{{list.id}}"  >{{list.comment}}</textarea></span>
+                                <span class="bdnone pre-box" *ngIf="status.value === 'R'">{{list.comment}}</span>
+                                <span class="bdnone" *ngIf="status.value === 'U'"><textarea rows="10"  cols="70" class="wid500 padding-5" id="comment{{list.id}}"  >{{list.comment}}</textarea></span>
                             </td>
                             <td class="txt_l">
-                                <span class="bdnone" *ngIf="status.value === 'R'">{{list.reference}}</span>
-                                <span class="bdnone" *ngIf="status.value === 'U'"><textarea rows="10"  cols="70" class="wid500" id="reference{{list.id}}"   >{{list.reference}}</textarea></span>
+                                <span class="bdnone pre-box" *ngIf="status.value === 'R'">{{list.reference}}</span>
+                                <span class="bdnone" *ngIf="status.value === 'U'"><textarea rows="10"  cols="70" class="wid500 padding-5" id="reference{{list.id}}"   >{{list.reference}}</textarea></span>
                             </td>
                             <td class="text-right">
                                 <span class="bdnone" *ngIf="status.value === 'R'">
